# exam_manager

./: .dockerignore  .env.docker.example  .env.example  .gitignore  README.md  config.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  error_trace.txt  full_error.txt  launch_exam_manager_local_admin.bat  main.py  pyproject.toml  requirements.txt  run.py  run_local_admin.py  wsgi.py
app/: __init__.py  models.py
config/: __init__.py  base.py  experiment.py  runtime.py  schema.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md  api-dev.md  api-ops.md  api.md  classification_pipeline_walkthrough.md  classifier_prompt_role_analysis.md  eval_labels_physio1.md  features.md  job40_manual_classification_review.md  log_schema.md  next_migration_backend.md  no_match_rejudge_agent_prompt.md  ops.md  postgres_classifier_upgrade_2026-02-10.md  project_ontology.md  refactor_next.md
migrations/: 20260201_1000_add_users.sql  20260201_1500_user_indexes.sql  20260201_2200_add_public_curriculum_templates.sql  20260203_1200_add_block_subject.sql  20260203_1300_add_subjects_table.sql  20260210_1130_add_question_examiner.sql
next_app/: .env.local.example  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
reports/: hyde-report.md  smoke_eval_report_autoconfirm_v2.md
scripts/: README.md  apply_postgres_indexes.py  backfill_crop_image_paths.py  backfill_eval_labels.py  backup_db.py  backup_postgres.py  benchmark_screen_p95.py  build_embeddings.py  build_queries.py  clone_db.py  compare_db_counts.py  dc  dev-db  (+23 more)
(+368 files in other folders)
